[project]
name = "ringbuf_py"
version = "0.1.0"
description = "A memory-mapped shared memory ringbuffer package in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
